# Xirai

./: .gitignore  Cargo.toml  README.md
assets/: Humanoid.glb  female.glb  man.glb
assets/dialogue/: main.yarn
assets/shaders/: jump_flood_algorithm.wgsl  jump_flood_edge.wgsl  jump_flood_final.wgsl  pastel.wgsl  pixel_art.wgsl  pixelate_edges.wgsl  quantize.wgsl  simple_outline.wgsl
maps/: map1.xmf
src/: assets.rs  board.rs  camera.rs  character.rs  character_controller.rs  chess.rs  cursor.rs  ik.rs  jump_flood.rs  main.rs  outline.rs  pastel.rs  pp.rs  quantize.rs  retrocamera.rs  save_load.rs  simple_outline.rs  transform.rs  ui.rs
