[package]
name = "xirai"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_mod_imgui = "0.7.2"
bevy_rapier3d = "0.31.0"
imgui = "0.12.0"
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
