[package]
name = "xirai"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", features = ["bevy_color", "bevy_remote", "dynamic_linking", "jpeg"] }
bevy_edge_detection = "0.15.4"
bevy_image = "0.16.1"
bevy_mod_imgui = "0.7.2"
bevy_mod_outline = "0.10.3"
bevy_rapier3d = "0.31.0"
bevy_remote = { version = "0.16.1", features = ["http"] }
bevy_sprite = "0.16.1"
bevy_yarnspinner = "0.5.0"
bevy_yarnspinner_example_dialogue_view = "0.5.0"
bytemuck = "1.23.2"
imgui = "0.12.0"
rand = "0.9.2"
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
